[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-working"
version = "1.0.0"
description = "A minimal terminal screensaver for when AI agents are working"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Om Jodhpurkar" }
]
keywords = ["ai", "agents", "screensaver", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
agent-working = "agent_working:main"

[project.urls]
Homepage = "https://github.com/infinity811/agent-working"
Repository = "https://github.com/infinity811/agent-working"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_working"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
